--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "ext-pcntl": "^7.1",
-        "php": ">5.6"
+        "php": ">=5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
