--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "PHP实现异步",
     "type": "library",
     "require": {
-        "ext-pcntl": "^7.1",
+        "ext-pcntl": "*",
         "php": ">=5.6"
     },
     "require-dev": {
